--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -140,12 +140,12 @@
   "Request in progress": "Request in progress",
   "api not linked": "Cette api n'est pas encore liée à un service Otoroshi.",
   "Subscribe": "Souscrire",
-  "team.selection.title": "Selectioner une équipe pour souscrire",
-  "team.selection.desc": "Vous êtes en train de souscrire a une api. Pour quelles équipes souhaitez-vous souscrire ?",
-  "free.without.quotas.desc": "Vous ne payez  rien et faites ce que vous vulez :)",
-  "free.with.quotas.desc": "Vous ne payez rien mais vous n'avez que %s requêtes authorizées par mois",
-  "quotas.with.limits.desc": "Vous payez %s %s et vous avez %s requêtes authorizées par mois",
-  "quotas.without.limits.desc": "Vous payez %s %s pour %s requêtes authorizées par mois et vous payez %s %s par requêtes additonnelles",
+  "team.selection.title": "Sélectionner une équipe pour souscrire",
+  "team.selection.desc": "Vous êtes en train de souscrire à une api. Pour quelles équipes souhaitez-vous souscrire ?",
+  "free.without.quotas.desc": "Vous ne payez  rien et faites ce que vous voulez :)",
+  "free.with.quotas.desc": "Vous ne payez rien mais vous n'avez que %s requêtes autorisées par mois",
+  "quotas.with.limits.desc": "Vous payez %s %s et vous avez %s requêtes autorisées par mois",
+  "quotas.without.limits.desc": "Vous payez %s %s pour %s requêtes autorisées par mois et vous payez %s %s par requêtes additionnelles",
   "pay.per.use.desc.default": "Vous payez %s %s par mois et vous payez %s %s par requête",
   "pay.per.use.desc.alt": "Vous payez %s %s par requête",
   "Loading page ...": "Chargement ...",
@@ -153,7 +153,7 @@
   "Next page": "Page suivante",
   "Create a new team": "Créer une nouvelle équipe",
   "Find a team": "Rechercher une équipe",
-  "Delete team": "Supprimer  l'équipe",
+  "Delete team": "Supprimer l'équipe",
   "Edit team": "Modifier l'équipe",
   "Type": {
     "s": "Type",
@@ -165,7 +165,7 @@
   "Set avatar from asset": "Définir l'avatar depuis un asset",
   "gravatar.btn.label": "Définir l'avatar depuis Gravatar",
   "Create": "Créer",
-  "Select file": "Selectionner un fichier",
+  "Select file": "Sélectionner un fichier",
   "Add asset": "Ajouter un asset",
   "Filename": "Nom de fichier",
   "Title": "Titre",
@@ -193,6 +193,8 @@
   "Select an asset": "Sélectionner un asset",
   "Find an assets": "Trouver un asset",
   "Select": "Sélectionner",
+  "SelectAll": "Tout sélectionner",
+  "UnselectAll": "Tout déselectionner",
   "Close": "Fermer",
   "loading": "Chargement...",
   "No assets found": "Aucun assets trouvés",
@@ -291,7 +293,7 @@
   "Token scope": "Scope token",
   "Client Id": "Id client",
   "Client secret": "Secret client",
-  "Authorize URL": "URL d'authtorisation",
+  "Authorize URL": "URL d'autorisation",
   "Token URL": "Token URL",
   "Userinfo URL": "URL info utilisateur",
   "Login URL": "URL de connexion",
