WIP #41 - Allow to change visibility of plan - Private or Public Move subscription process from api property to usage plan property

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -569,5 +569,6 @@
     "Integration": "Integration",
     "Force apikey auto-rotation": "Force apikey auto-rotation",
     "ApiKey": "ApiKey",
-    "Integration token": "Integration token"
+    "Integration token": "Integration token",
+    "Security": "Security"
 }
