--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -577,5 +577,12 @@
     "Team with id or name already exist": "Sorry, a team with this name already exists.",
     "Create team": "Create team",
     "Team": "Team",
-    "New team": "New team"
+    "New team": "New team",
+    "Member": {
+        "s": "Member",
+        "p": "Members"
+    },
+    "Pending members": "Pending (%s)",
+    "team.created": "Team %s successfully created",
+    "team.updated": "Team successfully updated"
 }
