FIX #39 user can create team (#59)
* WIP #39 - extract Team Edition Form to use it for creation page

* WIP #39 - use TeamCreationModal on YourTeam component

* WIP #39 - update teamCreationModal

* WIP #39 - redirect to members after team creation

* add margin for btns Tenant Style Editor

* WIP #39 - i18n creation team modal

* change Add Team localisation

* WIP #39 - new notification to invit people in a team
notification acceptation/rejection take only notifId on paramter now
split notification rejection in two way : team or mine notification rejection

* WIP #39 - pending members a visible in team member page

* WIP #39 - Fix unread notification indicator

* WIP #39 - Fix tests

* WIP #39 - Simplify how Modal works

* WIP #39 - Split team members between real members & pending

* WIP #39 - FIX paginated component

* WIP #39 - add test for new behaviour of addable-members api

* WIP #39 - Add docs and localize some text for team creation

Co-authored-by: Baudelot Philippe <philippe@baudelot.eu>

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -573,5 +573,16 @@
     "Force apikey auto-rotation": "Force apikey auto-rotation",
     "ApiKey": "ApiKey",
     "Integration token": "Integration token",
-    "Security": "Security"
+    "Security": "Security",
+    "Team with id or name already exist": "Sorry, a team with this name already exists.",
+    "Create team": "Create team",
+    "Team": "Team",
+    "New team": "New team",
+    "Member": {
+        "s": "Member",
+        "p": "Members"
+    },
+    "Pending members": "Pending (%s)",
+    "team.created": "Team %s successfully created",
+    "team.updated": "Team successfully updated"
 }
