--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -572,5 +572,16 @@
   "Force apikey auto-rotation": "Forcer la rotation auto. des secrets",
   "ApiKey": "Clef d'api",
   "Integration token": "Jeton d'intégration",
-  "Security": "Sécurité"
+  "Security": "Sécurité",
+  "Team with id or name already exist": "Désolé, une équipe avec ce nom existe déjà.",
+  "Create team": "Créer une équipe",
+  "Team": "Équipe",
+  "New team": "Nouvelle équipe",
+  "Member": {
+    "s": "Membre",
+    "p": "Membres"
+  },
+  "pending members": "En attente (%s)",
+  "team.created": "L'équipe %s à correctement été créée",
+  "team.updated": "L'équipe à correctement été modifiée"
 }
