i18n visibility & pricing in ApiCartridge

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -113,7 +113,7 @@
     "notif.apikey.deletion": "Your apiKey with clientId %s for api %s has been deleted",
     "api.access.request": "You will send an access request to the API %s. For which team do you want to send the request ?",
     "FreeWithoutQuotas": "Free without quotas",
-    "FFreeWithQuotas": "Free with quotas",
+    "FreeWithQuotas": "Free with quotas",
     "QuotasWithLimits": "Quotas only",
     "QuotasWithoutLimits": "Quotas / pay per use",
     "PayPerUse": "Pay per use",
@@ -530,7 +530,7 @@
     "Set font family from asset": "Set font family from asset",
     "Public":  "Public",
     "Private": "Private",
-    "Public With Authorizations": "Public With Authorizations",
+    "PublicWithAuthorizations": "Public With Authorizations",
     "Automatic": "Automatic",
     "Manual": "Manual",
     "team.created.success": "Team %s created successfully",
