--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -113,9 +113,9 @@
   "notif.apikey.deletion": "Voter cléd'api avec l'identifiant client %s pour api %s a été supprimée",
   "api.access.request": "Vous aller envoyer une demande d'accès à l'api %s. Pour quelle équipe voulez-vous envoyer cette demande ?",
   "FreeWithoutQuotas": "Gratuit sans quotas",
-  "FFreeWithQuotas": "Gratuit avec quotas",
-  "QuotasWithLimits": "Juste Quotas",
-  "QuotasWithoutLimits": "Quotas / paiement à l'usage",
+  "FreeWithQuotas": "Gratuit avec quotas",
+  "QuotasWithLimits": "Quotas avec limites",
+  "QuotasWithoutLimits": "Quotas sans limites",
   "PayPerUse": "Paiement à l'usage",
   "Error": "Erreur",
   "Done": "Terminé",
@@ -529,7 +529,7 @@
   "Set font family from asset": "Définir la police de style depuis un asset",
   "Public": "Publique",
   "Private": "Privée",
-  "Public With Authorizations": "Publique avec autorisation",
+  "PublicWithAuthorizations": "Publique avec autorisation",
   "Automatic": "Automatique",
   "Manual": "Manuelle",
   "team.created.success": "L'équipe %s a été créée avec succès",
