WIP #61 - Add TenantAdminOnly method @ implement it on Otoroshi controller

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -601,5 +601,9 @@
     "Enter your name": "Enter your name",
     "Enter email": "Enter email",
     "Your message": "Your message",
-    "Send": "Send"
+    "Send": "Send",
+    "delete.api.success": "Api %s deleted successfuly",
+    "otoroshi.settings.deleted.success": "Otoroshi settings successfully deleted",
+    "otoroshi.settings.created.success": "Otoroshi settings successfully created",
+    "otoroshi.settings.updated.success": "Otoroshi settings successfully updated"
 }
