--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -463,6 +463,10 @@
     "delete.apikey.confirm": "Are you sure you want to delete this apikey ?",
     "Api Name": "Api Name",
     "Api keys": "Api keys",
+    "API key": {
+        "s": "API key",
+        "p": "API keys"
+    },
     "clean.archived.sub.confirm": "Are you sure you want to clean archived apikeys ?",
     "See Stats": "See Stats",
     "clean archived apikeys": "clean archived apikeys",
@@ -614,5 +618,24 @@
     "remove.admin.tenant.confirm": "Are you sure you want to remove this admin from the tenant ?",
     "remove.admin.tenant.alert": "You can't delete this admin, it must remain one admin in a tenant.",
     "remove.admin.tenant.success": "%s is no lonoger admin of the tenant",
-    "Initialization": "Initialization"
+    "Initialization": "Initialization",
+    "Select an Otoroshi instance": "Select an Otoroshi instance",
+    "Import Otoroshi services": "Import Otoroshi services",
+    "Import Otoroshi apikeys": "Import Otoroshi apikeys",
+    "api.unique.name.error": "Api name must be unique",
+    "Jump to specific service": "Jump to specific service",
+    "init.services.title": "Service %s/%s",
+    "Service": "Service",
+    "Api name": "Api name",
+    "Api team": "Api team",
+    "Import" : "Import",
+    "Update": "Update",
+    "Create apis": "Create apis",
+    "Jump to specific apikey": "Jump to specific apikey",
+    "API": "API",
+    "Select an API": "Select an API",
+    "Select a plan": "Select a plan",
+    "create.plan.label": "Create plan %s",
+    "Select a team": "Select a team",
+    "create.team.label": "Create team %s"
 }
