--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -463,6 +463,10 @@
   "delete.apikey.confirm": "Êtes-vous certain de vouloir supprimer cette clé d'api ?",
   "Api Name": "Nom Api",
   "Api keys": "Clés d'api",
+  "API key": {
+    "s": "Clé d'API",
+    "p": "Clés d'api"
+  },
   "clean.archived.sub.confirm": "Êtes-vous certain de vouloir supprimer les clé d'api archivées ?",
   "See Stats": "Statistiques",
   "clean archived apikeys": "Supprimer les clés d'api archivées",
@@ -519,8 +523,9 @@
   "oops, something went wrong.": "Oups, quelque chose s'est mal passé.",
   "personal.token.empty.error": "Votre jeton perso. ne peut être vide",
   "remove.user.success": "l'utilisateur %s à été correctement supprimé",
-  "content type is not allowed": "le type de contenu n'est pas autorisé",
   "email.validity.error": "Vous avez fourni un courriel invalide",
+  "content type is not allowed": "le type de contenu n'est pas autorisé",
+  "error.replace.files.multi": "Vous ne pouvez pas remplacer un fichier par plusieurs fichiers",
   "error.replace.files.content.type": "Vous ne pouvez pas remplacer un fichier par un autre de type différent",
   "Email address does not exist": "Le courriel n'existe pas",
   "login.to.tenant": "Se connecter à %s",
@@ -613,5 +618,24 @@
   "remove.admin.tenant.confirm": "Êtes vous certain de vouloir supprimer cette admin du tenant ?",
   "remove.admin.tenant.alert": "Vous ne pouvez pas supprimer cette admin, il doit rester au moins un admin.",
   "remove.admin.tenant.success": "%s n'est plus admin du tenant",
-  "Initialization": "Initialisation"
+  "Initialization": "Initialisation",
+  "Select an Otoroshi instance": "Selectionner une instance d'Otoroshi",
+  "Import Otoroshi services": "Importer les services depuis Otoroshi",
+  "Import Otoroshi apikeys": "Importer les clés d'API depuis Otoroshi",
+  "api.unique.name.error": "Le nom de l'API doit être unique",
+  "Jump to specific service": "Aller à un service spécifique",
+  "init.services.title": "Service %s/%s",
+  "Service": "Service",
+  "Api name": "Nom de l'API",
+  "Api team": "Équipe",
+  "Import": "Importer",
+  "Update": "Mettre à jour",
+  "Create apis": "Créer les APIs",
+  "Jump to specific apikey": "Aller à une clé d'API spécifique",
+  "API": "API",
+  "Select an API": "Selectionner une API",
+  "Select a plan": "Selectionner un plan",
+  "create.plan.label": "Créer le plan %s",
+  "Select a team": "Selectionner une équipe",
+  "create.team.label": "Créer l'équipe %s"
 }
