WIP #53 - better label for btn in subscriptions step

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -631,6 +631,7 @@
     "Import" : "Import",
     "Update": "Update",
     "Create apis": "Create apis",
+    "Create subscriptions": "Create subscriptions",
     "Jump to specific apikey": "Jump to specific apikey",
     "API": "API",
     "Select an API": "Select an API",
