--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -631,6 +631,7 @@
   "Import": "Importer",
   "Update": "Mettre à jour",
   "Create apis": "Créer les APIs",
+  "Create subscriptions": "Créer les souscriptions",
   "Jump to specific apikey": "Aller à une clé d'API spécifique",
   "API": "API",
   "Select an API": "Selectionner une API",
