improve intro and finish skin

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -624,11 +624,11 @@
     "Import Otoroshi apikeys": "Import Otoroshi apikeys",
     "api.unique.name.error": "Api name must be unique",
     "Jump to specific service": "Jump to specific service",
-    "init.services.title": "Service %s/%s",
+    "init.services.title": "Service (%s/%s)",
     "Service": "Service",
     "Api name": "Api name",
     "Api team": "Api team",
-    "Import" : "Import",
+    "Import" : "Import this service",
     "Update": "Update",
     "Create apis": "Create apis",
     "Create subscriptions": "Create subscriptions",
