--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -624,11 +624,11 @@
   "Import Otoroshi apikeys": "Importer les clés d'API depuis Otoroshi",
   "api.unique.name.error": "Le nom de l'API doit être unique",
   "Jump to specific service": "Aller à un service spécifique",
-  "init.services.title": "Service %s/%s",
+  "init.services.title": "Service (%s/%s)",
   "Service": "Service",
   "Api name": "Nom de l'API",
   "Api team": "Équipe",
-  "Import": "Importer",
+  "Import": "Importer ce service",
   "Update": "Mettre à jour",
   "Create apis": "Créer les APIs",
   "Create subscriptions": "Créer les souscriptions",
