improve apikey skin

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -620,15 +620,17 @@
     "remove.admin.tenant.success": "%s is no lonoger admin of the tenant",
     "Initialization": "Initialization",
     "Select an Otoroshi instance": "Select an Otoroshi instance",
-    "Import Otoroshi services": "Import Otoroshi services",
+    "Import Otoroshi services": "Import Otoroshi apis",
     "Import Otoroshi apikeys": "Import Otoroshi apikeys",
     "api.unique.name.error": "Api name must be unique",
-    "Jump to specific service": "Jump to specific service",
-    "init.services.title": "Service (%s/%s)",
-    "Service": "Service",
+    "Jump to specific service": "Jump to specific api",
+    "init.services.title": "Api (%s/%s)",
+    "API group": "Api group",
+    "Service": "Api",
     "Api name": "Api name",
     "Api team": "Api team",
-    "Import" : "Import this service",
+    "Api imported": "Api to import",
+    "Import" : "Import this api",
     "Update": "Update",
     "Create apis": "Create apis",
     "Create subscriptions": "Create subscriptions",
