--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -620,15 +620,17 @@
   "remove.admin.tenant.success": "%s n'est plus admin du tenant",
   "Initialization": "Initialisation",
   "Select an Otoroshi instance": "Selectionner une instance d'Otoroshi",
-  "Import Otoroshi services": "Importer les services depuis Otoroshi",
+  "Import Otoroshi services": "Importer les API depuis Otoroshi",
   "Import Otoroshi apikeys": "Importer les clés d'API depuis Otoroshi",
   "api.unique.name.error": "Le nom de l'API doit être unique",
   "Jump to specific service": "Aller à un service spécifique",
-  "init.services.title": "Service (%s/%s)",
-  "Service": "Service",
+  "init.services.title": "API (%s/%s)",
+  "API group": "Groupe de l'API",
+  "Service": "API",
   "Api name": "Nom de l'API",
   "Api team": "Équipe",
-  "Import": "Importer ce service",
+  "Api imported": "APIs à importer",
+  "Import": "Importer cette API",
   "Update": "Mettre à jour",
   "Create apis": "Créer les APIs",
   "Create subscriptions": "Créer les souscriptions",
