--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -630,6 +630,7 @@
   "Api name": "Nom de l'API",
   "Api team": "Équipe",
   "Api imported": "APIs à importer",
+  "Apikey imported": "Apikey à importer",
   "Import": "Importer cette API",
   "Update": "Mettre à jour",
   "Create apis": "Créer les APIs",
