--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -630,6 +630,7 @@
     "Api name": "Api name",
     "Api team": "Api team",
     "Api imported": "Api to import",
+    "Apikey imported": "Apikey to import",
     "Import" : "Import this api",
     "Update": "Update",
     "Create apis": "Create apis",
