--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -2,7 +2,7 @@
     "moment.locale": "en",
     "moment.date.format": "YYYY, MMM. Do to HH:mm z",
     "moment.date.format.short":"YYYY/MM/DD",
-    "your teams": "your teams",
+    "your teams": "Your teams",
     "find team": "Find a team",
     "My profile": "My profile",
     "Teams": "Teams",
@@ -606,7 +606,7 @@
     "otoroshi.settings.deleted.success": "Otoroshi settings successfully deleted",
     "otoroshi.settings.created.success": "Otoroshi settings successfully created",
     "otoroshi.settings.updated.success": "Otoroshi settings successfully updated",
-    "Admins": "admins",
+    "Admins": "Admins",
     "Add new admin": "Add new admin",
     "Find an admin": "Find an admin",
     "Remove admin rights": "Remove admin rights",
