--- a/manual/src/main/paradox/tenantusage/1.5-initialize.md
+++ b/manual/src/main/paradox/tenantusage/1.5-initialize.md
@@ -39,4 +39,5 @@ The next screen list all subscriptions to create. If your agree with this, you c
 ## Done
 
 All the selected APIs and apikeys are created. You have certainly to go to API page to update some informations because APIs are just created with default informations, just name and plan.
-You can import APIS and apikeys from another Otorshi instance if you want.
+If you have created some teams, be aware that you are the only member of those teams.
+You can import APIS and apikeys from another Otorshi instance if you wish.
