FIX #53/init from otoroshi (#78)
Co-authored-by: Baudelot Philippe <philippe@baudelot.eu>

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -463,6 +463,10 @@
     "delete.apikey.confirm": "Are you sure you want to delete this apikey ?",
     "Api Name": "Api Name",
     "Api keys": "Api keys",
+    "API key": {
+        "s": "API key",
+        "p": "API keys"
+    },
     "clean.archived.sub.confirm": "Are you sure you want to clean archived apikeys ?",
     "See Stats": "See Stats",
     "clean archived apikeys": "clean archived apikeys",
@@ -613,5 +617,36 @@
     "admin.added.successfully": "%s has been added as new admin of the tenant",
     "remove.admin.tenant.confirm": "Are you sure you want to remove this admin from the tenant ?",
     "remove.admin.tenant.alert": "You can't delete this admin, it must remain one admin in a tenant.",
-    "remove.admin.tenant.success": "%s is no lonoger admin of the tenant"
+    "remove.admin.tenant.success": "%s is no lonoger admin of the tenant",
+    "Initialization": "Initialization",
+    "Select an Otoroshi instance": "Select an Otoroshi instance",
+    "Import Otoroshi services": "Import Otoroshi apis",
+    "Import Otoroshi apikeys": "Import Otoroshi apikeys",
+    "api.unique.name.error": "Api name must be unique",
+    "Jump to specific service": "Jump to specific api",
+    "init.services.title": "Api (%s/%s)",
+    "API group": "Api group",
+    "Service": "Api",
+    "Api name": "Api name",
+    "Api team": "Api team",
+    "Api imported": "Apis to import",
+    "Apikey imported": "Apikeys to import",
+    "Import" : "Import this api",
+    "Update": "Update",
+    "Create apis": "Create apis",
+    "Create subscriptions": "Create subscriptions",
+    "Jump to specific apikey": "Jump to specific apikey",
+    "API": "API",
+    "Select an API": "Select an API",
+    "Select a plan": "Select a plan",
+    "create.plan.label": "Create plan %s",
+    "Select a team": "Select a team",
+    "create.team.label": "Create team %s",
+    "Load a work in progress": "Load a work in progress",
+    "Daikoku initialization": "Daikoku initialization",
+    "Keyboard shortcuts": "Keyboard shortcuts",
+    "keyboard.shortcuts.arrow.right": "Arrow-Right: next step",
+    "keyboard.shortcuts.arrow.left": "Arrow-Left: previous step",
+    "keyboard.shortcuts.tab": "Tab: focus on api name",
+    "Finish": "Finish"
 }
