--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -36,7 +36,7 @@
   "Previous": "Précédent",
   "Next": "Suivant",
   "All": "Tout",
-  "All categories": "Toutes les categories",
+  "All categories": "Toutes les catégories",
   "All tags": "Tous les tags",
   "Search a team": "Rechercher une équipe",
   "Join": "Rejoindre",
